--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <input type="text" aria-label="輸入框" />
-    <script type="module" src="ime.ts"></script>
+    <script type="module" src="ime.js"></script>
   </body>
 </html>
